--- a/public/assets/css/profile.css
+++ b/public/assets/css/profile.css
@@ -43,14 +43,14 @@
 }
 
 .actionsBtn button {
-  background: transparent;
-  color: white;
-  padding: 10px 30px;
+  background: #eff3f4;
+  color: black;
+  padding: 12px 32px;
   border-radius: 30px;
-  border: 1px solid #536471;
+  border: 0;
   margin-right: 10px;
-  font-size: 15px;
-  font-weight: 500;
+  font-size: 16px;
+  font-weight: 600;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -65,7 +65,7 @@
 }
 
 .actionsBtn button:hover {
-  background: #536471 !important;
+  background: #eff3f4d9 !important;
 }
 
 .actionsBtn button i {
