--- a/public/scss/profile.scss
+++ b/public/scss/profile.scss
@@ -28,20 +28,20 @@
   margin-top: 12px;
   height: 35px;
   button {
-    background: transparent;
-    color: white;
-    padding: 10px 30px;
+    background: rgb(239, 243, 244);
+    color: rgb(0, 0, 0);
+    padding: 12px 32px;
     border-radius: 30px;
-    border: 1px solid rgb(83, 100, 113);
+    border: 0;
     margin-right: 10px;
-    font-size: 15px;
-    font-weight: 500;
+    font-size: 16px;
+    font-weight: 600;
     display: flex;
     align-items: center;
     justify-content: center;
     transition: 0.3s;
     &:hover {
-      background: #536471 !important;
+      background: #eff3f4d9 !important;
     }
     i {
       font-size: 17px;
