--- a/public/scss/profile.scss
+++ b/public/scss/profile.scss
@@ -145,3 +145,50 @@
     }
   }
 }
+
+.followFollowing_container {
+  .follow {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px solid gray;
+    padding: 20px;
+    .followUserInfo {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      .displayName {
+        display: flex;
+        flex-direction: column;
+        color: #fff;
+        a {
+          font-size: 20px;
+        }
+      }
+      .avatar {
+        width: 50px;
+        height: 50px;
+        img {
+          width: 100%;
+          height: 100%;
+          border-radius: 50%;
+        }
+      }
+    }
+    button {
+      padding: 4px 30px;
+      border-radius: 30px;
+      font-size: 15px;
+      font-weight: 500;
+    }
+    .follow {
+      background: #eff3f4 !important;
+      border: 1px solid white;
+    }
+    .follow.active {
+      background: transparent !important;
+      color: white;
+      border: 1px solid white;
+    }
+  }
+}
