--- a/views/pages/follow/follow.pug
+++ b/views/pages/follow/follow.pug
@@ -69,7 +69,7 @@ block bodyContent
                                 i.fas.fa-list
                                 .notification_box
                             | Lists
-                        a.nav_link(href="/profile")
+                        a.nav_link(href=`/profile/${user.username}`)
                             span
                                 i.fas.fa-user-circle
                                 .notification_box
