--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -533,6 +533,7 @@
 }
 
 .main .middle_side_container .tweetPost_container .tweet .tweet_body button {
+  width: 100%;
   background: transparent;
   border: none;
   padding: 10px;
@@ -711,6 +712,7 @@
 }
 
 #replyModal .tweet .tweet_body button {
+  width: 100%;
   background: transparent;
   border: none;
   padding: 10px;
@@ -910,11 +912,12 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+  gap: 7px;
   background-color: transparent;
-  border-radius: 30px;
+  padding: 0px 15px !important;
   -webkit-transition: 0.3s;
   transition: 0.3s;
 }
@@ -927,6 +930,39 @@
 
 .deleteBtn i {
   color: white !important;
+}
+
+.pinBtn {
+  width: 40px;
+  height: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+  gap: 7px;
+  background-color: transparent;
+  padding: 0px 15px !important;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.pinBtn:hover {
+  background: rgba(51, 38, 153, 0.12549) !important;
+  -webkit-box-shadow: 0 0.5rem 1rem #00000026 !important;
+          box-shadow: 0 0.5rem 1rem #00000026 !important;
+}
+
+.pinBtn i {
+  color: white !important;
+}
+
+.pinBtn.active i {
+  color: #03a9f4 !important;
 }
 
 #avatarUpdateModal .modal-content {
@@ -973,6 +1009,77 @@ div#coverPreviewContainer img {
 .cover_img img {
   height: 100%;
   width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+}
+
+.dropdown .activeBtn {
+  display: -webkit-box !important;
+  display: -ms-flexbox !important;
+  display: flex !important;
+}
+
+.dropdown .toggle_btn {
+  width: 40px !important;
+  height: 40px !important;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  color: #e5e5e5 !important;
+  border-radius: 50%;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.dropdown .toggle_btn:hover {
+  background: rgba(51, 38, 153, 0.12549) !important;
+  -webkit-box-shadow: 0 0.5rem 1rem #00000026 !important;
+          box-shadow: 0 0.5rem 1rem #00000026 !important;
+}
+
+.dropdown .dropdown-toggle::after {
+  display: none !important;
+  margin-left: 0.255em;
+  vertical-align: 0.255em;
+  content: "";
+  border-top: 0.3em solid;
+  border-right: 0.3em solid transparent;
+  border-bottom: 0;
+  border-left: 0.3em solid transparent;
+}
+
+.pinPost {
+  border-bottom: 7px solid #3f3d3d;
+  color: white;
+}
+
+.pinPost .pinnedFlag {
+  margin-left: 22px;
+  margin-top: 10px;
+  font-family: cursive;
+  font-size: 17px;
+  font-weight: 600;
+}
+
+.pinDeleteBtn {
+  position: absolute;
+  width: 212px;
+  padding: 10px 0px;
+  right: 0;
+  display: none;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: black !important;
+  -webkit-box-shadow: #ffffff33 0px 0px 15px, #ffffff26 0px 0px 3px 1px;
+          box-shadow: #ffffff33 0px 0px 15px, #ffffff26 0px 0px 3px 1px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  border-radius: 10px;
 }
