--- a/views/pages/follow/follow.pug
+++ b/views/pages/follow/follow.pug
@@ -44,11 +44,10 @@ block bodyContent
                                 i.fas.fa-home
                                 .notification_box 1
                             |Home 
-                        a.nav_link(href="/explore")
+                        a.nav_link(href="/search")
                             span
-                                i.fas.fa-hashtag
-                                .notification_box
-                            |Explore 
+                                i.fas.fa-search
+                            |Search 
                         a.nav_link(href="/notification")
                             span
                                 i.fas.fa-bell
