--- a/views/pages/search/search.pug
+++ b/views/pages/search/search.pug
@@ -3,22 +3,22 @@ block title
     title=title
 block cssLink
     link(rel="stylesheet" href="/assets/css/home.css")
+    link(rel="stylesheet" href="/assets/css/profile.css")
     link(rel="stylesheet" href="/assets/css/toastify.css")
 block jsScript
-    script(src="/assets/js/home.js" defer)
+    script(src="/assets/js/search.js" defer)
+    script(src="/assets/js/app.js" defer)
     <script type="text/javascript" src="/assets/js/toastify.js" defer></script>
     <script type="text/javascript" src="/assets/js/moment.js" defer></script>
 block bodyContent
     - avatarUrl = user.avatarProfile ? `/uploads/${user._id}/profile/${user.avatarProfile}` : `/uploads/profile/avatar.png`;
-
     #replyModal.modal.fade(aria-hidden='true' aria-labelledby='commentModalTitle' tabindex='-1')
         .modal-dialog.modal-dialog-centered
-            .modal-content
+            .modal-content.shadow-lg
                 .modal-header
                     h2#commentModalTitle.modal-title.fs-5 Reply
                     button.btn-close(type='button' class="btn-close btn-close-white" data-bs-dismiss='modal' aria-label='Close')
                 .modal-body
-
                 .modal-footer
                     .create_reply
                         .user_avatar
@@ -31,6 +31,34 @@ block bodyContent
                                     i.fas.fa-image(aria-hidden='true')
                                     input#replyPostImage(type='file' multiple='' hidden='')
                                 button#replyBtn(disabled onclick="clearInputData()") Reply Tweet
+
+    #avatarUpdateModal.modal.fade(aria-hidden='true' aria-labelledby='avatarModalTitle' tabindex='-1')
+        .modal-dialog.modal-dialog-centered
+            .modal-content.shadow-lg
+                .modal-header
+                    h2#avatarModalTitle.modal-title.fs-5 Update Profile Avatar
+                    button.btn-close(type='button' class="btn-close btn-close-white" data-bs-dismiss='modal' aria-label='Close')
+                .modal-body
+                    input#updateAvatarInput(type='file')
+                    #avatarPreviewContainer
+                        img#avatarPreview
+                .modal-footer
+                    button.btn.btn-secondary(type='button' data-bs-dismiss='modal') Close
+                    button#avatarUpdateBtn.btn.btn-primary(type='button') Save changes
+
+    #coverUpdateModal.modal.fade(aria-hidden='true' aria-labelledby='coverModalTitle' tabindex='-1')
+        .modal-dialog.modal-dialog-centered
+            .modal-content.shadow-lg
+                .modal-header
+                    h2#coverModalTitle.modal-title.fs-5 Update Cover Image
+                    button.btn-close(type='button' class="btn-close btn-close-white" data-bs-dismiss='modal' aria-label='Close')
+                .modal-body
+                    input#coverUpdateInput(type='file')
+                    #coverPreviewContainer
+                        img#coverPreview
+                .modal-footer
+                    button.btn.btn-secondary(type='button' data-bs-dismiss='modal') Close
+                    button#coverUpdateBtn.btn.btn-primary(type='button') Save changes
     main.main
         .left_side_container
             .left_top_area
@@ -47,7 +75,7 @@ block bodyContent
                         a.nav_link(href="/search")
                             span
                                 i.fas.fa-search
-                            |Search  
+                            |Search 
                         a.nav_link(href="/notification")
                             span
                                 i.fas.fa-bell
@@ -83,29 +111,30 @@ block bodyContent
                 .user_profile_info
                     img(src=avatarUrl alt="Avatar")
                     .info
-                        h5 #{user.firstName + ' ' + user.lastName}
-                        span @#{user.username}
+                        h5 #{user.firstName + " " + user.lastName}
+                        span #{user.username}
                     i.fas.fa-ellipsis-h
                 .menu.active.shadow
-                    a(href="/logout") Log out @#{user.username}
+                    a(href="/logout") Log out #{user.username}
         .middle_side_container
             .post_header
-                h4.d-flex Latest Tweet 
+                h4
+                    button(onclick="history.back()" class="backBtn")
+                        i.fas.fa-arrow-left
+                    |Search
                 i.fas.fa-star
-            .create_post
-                .user_avatar
-                    a(href="/profile")
-                        a(href=`/profile/` + user.username)
-                            img(src=avatarUrl alt="Avatar")
-                .post_area
-                    textarea#textAreaContent(placeholder="What's happening")
-                    #postImageContainer
-                    .post_actions.mt-3
-                        label(for="postImage")
-                            i.fas.fa-image
-                            input#postImage(type="file" multiple hidden)
-                        button#tweetBtn(disabled) Tweet
+            .searchBox_container
+                i.fas.fa-search
+                input#searchInput(type="search" placeholder="Search " + tab, name="")
+            .tabs_container
+                a.post_tab(class=tab === 'posts' ? 'active' : '' href='/search') Tweet
+
+                a.reply_tab(class=tab === 'users' ? 'active' : '' href='/search/user') User
             .tweetPost_container
+            .followFollowing_container
+
         .right_side_container
     script.
         const user = !{userObj}
+        const tab = '!{tab}'
+        const userProfileJs = {}
