--- a/views/pages/singlePost/postPage.pug
+++ b/views/pages/singlePost/postPage.pug
@@ -86,7 +86,7 @@ block bodyContent
                         h5 #{user.firstName + ' ' + user.lastName}
                         span @#{user.username}
                     i.fas.fa-ellipsis-h
-                .menu.active.shadow
+                .menu.activeToggle.shadow
                     a(href="/logout") Log out @#{user.username}
         .middle_side_container
             .post_header
