--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -20,6 +20,8 @@ html(lang="en")
         script(src="https://kit.fontawesome.com/e88a770387.js" crossorigin="anonymous")
         script(src="//cdn.jsdelivr.net/npm/sweetalert2@11")
         //- JS Script
+        <script type="text/javascript" src="/assets/js/moment.js" defer></script>
+        script(src="https://cdn.socket.io/4.5.4/socket.io.min.js") 
         block jsScript
     body
         block bodyContent
