--- a/public/assets/css/profile.css
+++ b/public/assets/css/profile.css
@@ -311,6 +311,7 @@
 .followFollowing_container .follow .followUserInfo .avatar {
   width: 50px;
   height: 50px;
+  position: relative;
 }
 
 .followFollowing_container .follow .followUserInfo .avatar img {
