--- a/public/scss/home.scss
+++ b/public/scss/home.scss
@@ -157,7 +157,7 @@
           }
         }
       }
-      .active {
+      .activeToggle {
         display: none;
       }
     }
@@ -195,6 +195,8 @@
       .user_avatar {
         flex-basis: 50px;
         margin-right: 10px;
+        height: 51px;
+        position: relative;
         img {
           width: 50px;
           height: 50px;
@@ -300,6 +302,7 @@
         .avatar-area {
           width: 50px;
           height: 50px;
+          position: relative;
           img {
             width: 100%;
             height: 100%;
@@ -448,6 +451,7 @@
     .avatar-area {
       width: 50px;
       height: 50px;
+      position: relative;
       img {
         width: 100%;
         height: 100%;
@@ -557,6 +561,8 @@
       .user_avatar {
         flex-basis: 50px;
         margin-right: 10px;
+        position: relative;
+        height: 51px;
         img {
           width: 50px;
           height: 50px;
