--- a/public/scss/profile.scss
+++ b/public/scss/profile.scss
@@ -215,6 +215,7 @@
       .avatar {
         width: 50px;
         height: 50px;
+        position: relative;
         img {
           width: 100%;
           height: 100%;
